2016-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix double underscores in manual.

2016-08-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/test-p99-conformance.c:
	  Enable a test for newer GCC, comment on other GCC issues.

2016-08-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  doc/sdccman.lyx,
	  support/regression/tests/for.c,
	  test-p99-conformance.c:
	  RFE #165: C99 compliance: for (int i=0; ...

2016-08-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/test-p99-conformance.c:
	  Disable a subtest for host, since it fails on older GCC, disable a subtest for backends that don't have long long.

2016-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/test-p99-conformance.c,
	  support/regression/fwk/lib/extern1.c:
	  Enable inlining test for host.

2016-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/test-p99-conformance.c:
	  Document SDCC bug correspondance to P99 conformance tests.

2016-08-13 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/test-p99-conformance.c:
	  Some P99 conformance tests.

2016-08-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/sim.src/mem.cc: rewrote some of the memory cell classes
	  to work properly on big endian architectures

2016-08-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/charscl.h
	  Fix the failure of building ucsim on MacOS.
	* support/regression/tests/gcc-torture-execute-string-opt-18.c
	* support/regression/tests/string.c
	  Disable several tests on MacOS.

2016-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/string.h,
	  device/lib/tlcs90/Makefile.in,
	  device/lib/tlcs90/memmove.s:
	  pop af correctness for tlcs90.

2016-08-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/get_ticks.py: parse the byte count more robustly