@@ -1,3 +1,10 @@
+2016-08-21 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/mcs51/gen.c,
+	  src/mcs51/gen.h,
+	  src/mcs51/ralloc.c,
+	  The basics of long long support for mcs51.
+
 2016-08-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* doc/sdccman.lyx:
